# PSO

./: .clang-format  .gitignore  CMakeLists.txt  README.md  plot.py  run_all.sh
data/: swarm_min_cost_history.csv  swarm_summary.csv
data/positions/: history_0.csv  history_1.csv  history_10.csv  history_11.csv  history_12.csv  history_13.csv  history_14.csv  history_15.csv  history_16.csv  history_17.csv  history_18.csv  history_19.csv  history_2.csv  history_20.csv  history_21.csv  history_22.csv  history_23.csv  history_24.csv  history_3.csv  history_4.csv  history_5.csv  history_6.csv  history_7.csv  history_8.csv  history_9.csv
include/: i_particle.h  i_swarm.h  particle.h  particle_parameter.h  problem_functions.h  swarm.h  swarm_parameter.h
src/: main.cpp  particle.cpp  swarm.cpp
